--- a/web/src/routes/Login/index.module.scss
+++ b/web/src/routes/Login/index.module.scss
@@ -1,8 +1,8 @@
 
 .page {
-  background-image: url('../../assets/image/bg.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
+  // background-image: url('../../assets/image/bg.jpg');
+  // background-size: cover;
+  // background-repeat: no-repeat;
 }
 
 .form {
